[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://src/player/Player04.gd" type="Script" id=2]
[ext_resource path="res://fonts/NotoSansJP/NotoSansJP-Regular.tres" type="DynamicFont" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.9

[node name="Player04" type="Node2D"]
script = ExtResource( 2 )

[node name="Body" type="RigidBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 1 )
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( 1.5, 2 )
shape = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Body"]
margin_left = 53.0
margin_right = 210.0
margin_bottom = 78.0
custom_colors/default_color = Color( 0.984314, 0.0117647, 0.172549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 3 )
text = "0000"

[connection signal="body_shape_entered" from="Body" to="." method="_on_Body_body_shape_entered"]
[connection signal="body_shape_exited" from="Body" to="." method="_on_Body_body_shape_exited"]
